Fixed index page (extra buttons) Fixed about page (extra white space) Fixed password reset pages (extra white space)

--- a/stylesheets/_base.scss
+++ b/stylesheets/_base.scss
@@ -58,80 +58,56 @@
     }
 
 //section that is substituting main funcitons of resizing
-         .section-resized {
-       padding-top: $nav-size*2;
-       padding-bottom: 100px;
-       width: 960px;
-       max-width: 100%;
-        margin: auto;     
-        @include breakpoint ($min: xs) {
-            width: 350px;
-            max-width: 100%;
-        }
-        @include breakpoint ($min: sm) {
-            width: 620px;
-            max-width: 100%;
-        }
-        @include breakpoint ($min: md) {
-            width: 720px;
-            max-width: 100%;
-        }
-        @include breakpoint ($min: lg) {
-            width: 1100px;
-            max-width: 100%;
-        }
-        @include breakpoint ($min: xl) {
-            width: 1240px;
-            max-width: 100%;
-        }
+.section-resized {
+    padding-top: $nav-size*2;
+    padding-bottom: 100px;
+    width: 960px;
+    max-width: 100%;
+    margin: auto;
+    @include breakpoint ($min: xs) {
+        width: 350px;
+        max-width: 100%;
     }
+    @include breakpoint ($min: sm) {
+        width: 620px;
+        max-width: 100%;
+    }
+    @include breakpoint ($min: md) {
+        width: 720px;
+        max-width: 100%;
+    }
+    @include breakpoint ($min: lg) {
+        width: 1100px;
+        max-width: 100%;
+    }
+    @include breakpoint ($min: xl) {
+        width: 1240px;
+        max-width: 100%;
+    }
+}
 
 .section-resized-extra {
-  @extend .section-resized;
-    padding-bottom: 138px;
-    
- @include breakpoint ($min: md) {
-      padding-bottom: 193px;}
+    @extend .section-resized;
+    min-height: 100vh;
 }
 
 
-.section-resized-extra-plus {
-  @extend .section-resized;
-    padding-bottom: 149px;
-    
- @include breakpoint ($min:xs) {
-      padding-bottom: 212px;}
-    
-    @include breakpoint ($min:sm) {
-      padding-bottom: 219px;}
-    
-     @include breakpoint ($min:md) {
-      padding-bottom: 232px;}
-
-    @include breakpoint ($min:lg) {
-      padding-bottom: 160px;}
-    
-    
-}
-
-
-    /*------------------------------------*\
-  #FONTS
+/*------------------------------------*\
+#FONTS
 \*------------------------------------*/
-    
     @font-face {
         font-family: BoldFont;
         src: url(../fonts/Exo-SemiBold.ttf);
         font-weight: bold;
     }
-    
+
     @font-face {
         font-family: TextFont;
         src: url(../fonts/Ayuthaya.ttf);
         font-weight: regular;
     }
-    
-    //responsive font sizes 
+
+    //responsive font sizes
     .title {
         font-family: BoldFont;
         color: $black;
